--- a/src/main/resources/templates/displayFlights.html
+++ b/src/main/resources/templates/displayFlights.html
@@ -22,7 +22,7 @@
 				<td th:text="${flight.depatureCity}"></td>
 				<td th:text="${flight.arrivalCity}"></td>
 				<td th:text="${flight.estimatedDepartureTime}">
-				<td><a href="/showCompleteReservation"></a></td>
+				<td><a href="/showCompleteReservation">Select</a></td>
 			</tr>
 
 		</tbody>
