--- a/src/main/resources/templates/registration/signin.html
+++ b/src/main/resources/templates/registration/signin.html
@@ -8,7 +8,7 @@
 	<div class="container">
 		<div class="row mx-auto">
 			<div class="col-md-10">
-				<form th:action="@{/signin}" method="post">
+				<form th:action="@{/signin}" method="POST">
 					<div class="form-group">
 						<label for="Email1">Email address</label> <input type="email"
 							class="form-control" id="" aria-describedby="emailHelp"
