--- a/src/main/resources/templates/findFlights.html
+++ b/src/main/resources/templates/findFlights.html
@@ -6,22 +6,30 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
-    <form th:action="@{/findFlights}" method="POST">
-  <div class="form-group">
-    <label for="exampleInputEmail1">From</label>
-    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" th:field="*{from}">
-   
-  </div>
-  <div class="form-group">
-    <label for="exampleInputPassword1">TO</label>
-    <input type="text" class="form-control" id="exampleInputPassword1" th:field="*{to}">
-  </div>
-  <div class="form-group form-check">
-  <label class="form-check-label" for="exampleCheck1">Departure Date</label>
-    <input type="date" class="form-check-input" id="exampleCheck1">
-    
-  </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+    <div class="container">
+		<div class="row">
+			<div class="col-md-8">
+				<form th:action="@{/findFlights}" method="POST">
+					<div class="form-group">
+						<label for="exampleInputEmail1">From</label> <input type="text"
+							class="form-control" id="exampleInputEmail1"
+							aria-describedby="emailHelp" name="from">
+
+					</div>
+					<div class="form-group">
+						<label for="exampleInputPassword1">TO</label> <input type="text"
+							class="form-control" id="exampleInputPassword1" name="to">
+					</div>
+					<div class="form-group form-check">
+						<label class="form-check-label" for="exampleCheck1">Departure
+							Date</label> <input type="text" class="form-check-input"
+							id="exampleCheck1" name="dateOfDeparture">
+
+					</div>
+					<button type="submit" class="btn btn-primary">Submit</button>
+				</form>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
