--- a/src/main/resources/templates/findFlights.html
+++ b/src/main/resources/templates/findFlights.html
@@ -22,8 +22,8 @@
 					</div>
 					<div class="form-group form-check">
 						<label class="form-check-label" for="exampleCheck1">Departure
-							Date</label> <input type="text" class="form-check-input"
-							id="exampleCheck1" name="dateOfDeparture">
+							Date</label> <input type="date" class="form-check-input"
+							id="exampleCheck1" name="dateOfDeparture" pattern = "YYYY-MM-DD">
 
 					</div>
 					<button type="submit" class="btn btn-primary">Submit</button>
