--- a/src/main/resources/templates/displayFlights.html
+++ b/src/main/resources/templates/displayFlights.html
@@ -21,6 +21,7 @@
 				<td th:text="${flight.airlinesName}"></td>
 				<td th:text="${flight.depatureCity}"></td>
 				<td th:text="${flight.arrivalCity}"></td>
+				<td th:text="${flight.dateOfDepature}"></td>
 				<td th:text="${flight.estimatedDepartureTime}">
 				<td><a href="/showCompleteReservation">Select</a></td>
 			</tr>
