--- a/src/main/resources/templates/findFlights.html
+++ b/src/main/resources/templates/findFlights.html
@@ -23,7 +23,7 @@
 					<div class="form-group form-check">
 						<label class="form-check-label" for="exampleCheck1">Departure
 							Date</label> <input type="date" class="form-check-input"
-							id="exampleCheck1" name="dateOfDeparture" pattern = "YYYY-MM-DD">
+							id="exampleCheck1" name="dateOfDeparture">
 
 					</div>
 					<button type="submit" class="btn btn-primary">Submit</button>
